tree-sitter-poste-http/test/corpus/http_requests.txt
================================================================================
Basic request block
================================================================================

###
GET https://api.example.com/users

--------------------------------------------------------------------------------

(document
  (request_block
    (separator))
  (request_line
    (method
      (method_get))
    (url
      (url_path))))

================================================================================
Request block with name
================================================================================

### Get users
GET https://api.example.com/users

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path))))

================================================================================
Variable definition
================================================================================

@base_url = https://api.example.com
@token = eyJhbGciOiJIUzI1NiI

--------------------------------------------------------------------------------

(document
  (variable_definition
    (var_name)
    (var_assign)
    (var_value))
  (variable_definition
    (var_name)
    (var_assign)
    (var_value)))

================================================================================
Import variable reference (Lua import keypath)
================================================================================

@my_name = m.a_string
@first_tag = m.tags[1]
@first_user_name = m.users[1].name

--------------------------------------------------------------------------------

(document
  (variable_definition
    (var_name)
    (var_assign)
    (import_var_ref))
  (variable_definition
    (var_name)
    (var_assign)
    (import_var_ref))
  (variable_definition
    (var_name)
    (var_assign)
    (import_var_ref)))

================================================================================
Import variable reference falls back to plain var_value
================================================================================

@number = 123
@plain = hello world

--------------------------------------------------------------------------------

(document
  (variable_definition
    (var_name)
    (var_assign)
    (var_value))
  (variable_definition
    (var_name)
    (var_assign)
    (var_value)))

================================================================================
Variable reference in URL
================================================================================

### Get user
GET {{base_url}}/users/{{user_id}}

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path
        (variable
          (identifier))
        (variable
          (identifier))))))

================================================================================
Headers
================================================================================

GET /api/users
Authorization: Bearer {{token}}
Content-Type: application/json

--------------------------------------------------------------------------------

(document
  (request_line
    (method
      (method_get))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value
      (variable
        (identifier))))
  (header
    (header_key)
    (header_value)))


================================================================================
POST with JSON body
===============================================================================

### Create user
POST https://api.example.com/users
Content-Type: application/json

{
  "name": "John",
  "email": "john@example.com"
}

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value))
  (json_body))

================================================================================
POST with JSON body containing hex color (#) in strings
================================================================================

### Recolor
POST /cloth/recolor/works
Content-Type: application/json

{
  "extractedColors": [
    {"hex": "#ddc306", "selected": false},
    {"hex": "#3bb1b1", "selected": true}
  ]
}

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value))
  (json_body))

================================================================================
Comments
================================================================================

# This is a comment
### Get data
GET /api/data

--------------------------------------------------------------------------------

(document
  (comment)
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path))))

================================================================================
Prompt variable
================================================================================

<<username
<<role [admin, user, guest]

--------------------------------------------------------------------------------

(document
  (prompt_variable
    (prompt_name))
  (prompt_variable
    (prompt_name)
    (prompt_options)))

================================================================================
Pre-script block
================================================================================

### Test
GET /api/data
< {%
  client.log("pre-flight");
%}

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path)))
  (pre_script
    (script_block)))

================================================================================
Post-script assertion
================================================================================

### Test
GET /api/data
> {%
  client.assert(response.status == 200);
%}

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path)))
  (post_script
    (script_block)))

================================================================================
Import directive
================================================================================

import ./auth.http
import ./orders.http as orders

--------------------------------------------------------------------------------

(document
  (import_directive
    (import_path))
  (import_directive
    (import_path)
    (import_alias_clause)))

================================================================================
Run directive
================================================================================

run #Login
run #orders.ListOrders (@status=pending)
run ./helper_batch.http

-------------------------------------------------------------------------------

(document
  (run_directive
    (run_target
      (run_target_name)))
  (run_directive
    (run_target
      (run_target_prefix)
      (run_target_name))
    (run_vars_clause))
  (run_directive
    (run_target
      (run_target_name))))

================================================================================
File upload
================================================================================

POST /api/upload
Content-Type: multipart/form-data

< /path/to/file.txt

--------------------------------------------------------------------------------

(document
  (request_line
    (method
      (method_post))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value))
  (file_upload))

================================================================================
External script
================================================================================

< ./scripts/preprocess.lua
> ./scripts/validate.lua

--------------------------------------------------------------------------------

(document
  (external_script)
  (external_assertion))

================================================================================
Multipart form data - text field
================================================================================

------WebKitFormBoundary
Content-Disposition: form-data; name="username"

admin
------WebKitFormBoundary--

--------------------------------------------------------------------------------

(document
  (multipart_boundary)
  (multipart_form_data
    (multipart_disposition
      (multipart_disposition_key)
      (multipart_disposition_value))
    (multipart_value))
  (multipart_boundary))

================================================================================
Multipart form data - multiple fields
================================================================================

------WebKitFormBoundary
Content-Disposition: form-data; name="username"

admin
------WebKitFormBoundary
Content-Disposition: form-data; name="email"

admin@example.com
------WebKitFormBoundary--

--------------------------------------------------------------------------------

(document
  (multipart_boundary)
  (multipart_form_data
    (multipart_disposition
      (multipart_disposition_key)
      (multipart_disposition_value))
    (multipart_value))
  (multipart_boundary)
  (multipart_form_data
    (multipart_disposition
      (multipart_disposition_key)
      (multipart_disposition_value))
    (multipart_value))
  (multipart_boundary))

================================================================================
Multipart form data - with Content-Type and file upload
================================================================================

------WebKitFormBoundary
Content-Disposition: form-data; name="avatar"; filename="test.txt"
Content-Type: text/plain

< ./upload_test.txt
------WebKitFormBoundary--

--------------------------------------------------------------------------------

(document
  (multipart_boundary)
  (multipart_form_data
    (multipart_disposition
      (multipart_disposition_key)
      (multipart_disposition_value))
    (multipart_content_type
      (multipart_content_type_key)
      (multipart_content_type_value))
    (file_upload_token))
  (multipart_boundary))
===============================================================================
POST with URL-encoded form body
===============================================================================

### URL Encoded Form
POST https://httpbin.org/post
Content-Type: application/x-www-form-urlencoded
Accept: application/json

name=John&age=30&city=NewYork

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value))
  (header
    (header_key)
    (header_value))
  (form_body))

===============================================================================
POST with URL-encoded form body and {{var}} references
===============================================================================

### URL Encoded Form
POST {{base_url}}/post
Content-Type: application/x-www-form-urlencoded

name={{name}}&age={{age}}&city=NewYork

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path
        (variable
          (identifier)))))
  (header
    (header_key)
    (header_value))
  (form_body))

===============================================================================
POST with URL-encoded form body - multi-line (& at start of continuation lines)
===============================================================================

### URL Encoded Form
POST https://httpbin.org/post
Content-Type: application/x-www-form-urlencoded
Accept: application/json

name=John
&age=30
&city=NewYork

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value))
  (header
    (header_key)
    (header_value))
  (form_body))

===============================================================================
POST with URL-encoded form body - multi-line with {{var}} references
===============================================================================

### URL Encoded Form
POST {{base_url}}/post
Content-Type: application/x-www-form-urlencoded

name={{name}}
&age={{age}}
&city=NewYork

-------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_post))
    (url
      (url_path
        (variable
          (identifier)))))
  (header
    (header_key)
    (header_value))
  (form_body))

===============================================================================
Comment with embedded # hash
===============================================================================

#   run #auth.Login                     # single request via alias
#   run #auth.Login (@token=abc123)     # with inline variable override
#   run ./helper_batch.http             # all requests from file

-------------------------------------------------------------------------------

(document
  (comment)
  (comment)
  (comment))

===============================================================================
Prompt variable with nested brackets (jq syntax)
===============================================================================

<<item [{{jq.response.body.[].parents[].sha}}]

-------------------------------------------------------------------------------

(document
  (prompt_variable
    (prompt_name)
    (prompt_options
      (variable
        (identifier)))))


================================================================================
URL with query parameters
================================================================================

### Search
GET https://api.example.com/search?q=hello&page=1&limit={{limit}}

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path)
      (query_string
        (query_params
          (query_param
            (query_key)
            (query_value))
          (query_param
            (query_key)
            (query_value))
          (query_param
            (query_key)
            (query_value
              (variable
                (identifier)))))))))

================================================================================
URL with query parameter - empty value
================================================================================

### Search
GET https://api.example.com/search?q=&debug

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_get))
    (url
      (url_path)
      (query_string
        (query_params
          (query_param
            (query_key))
          (query_param
            (query_key)))))))

================================================================================
Script request line (no URL)
================================================================================

### Run login flow
SCRIPT
> {%
  local r = client.run("#api.Login", {})
%}

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method_script))
  (post_script
    (script_block)))

================================================================================
GraphQL request line
================================================================================

### Get user
GRAPHQL https://api.example.com/graphql
Authorization: Bearer token

--------------------------------------------------------------------------------

(document
  (request_block
    (separator)
    (request_name))
  (request_line
    (method
      (method_graphql))
    (url
      (url_path)))
  (header
    (header_key)
    (header_value)))

================================================================================
gRPC request line
================================================================================

GRPC localhost:50051/grpc.examples.echo.EchoService/Echo

--------------------------------------------------------------------------------

(document
  (request_line
    (method
      (method_grpc))
    (url
      (url_path))))

================================================================================
WebSocket request line
================================================================================

WEBSOCKET wss://stream.example.com/v1/feed

--------------------------------------------------------------------------------

(document
  (request_line
    (method
      (method_websocket))
    (url
      (url_path))))
